--- a/templates/secret.yaml
+++ b/templates/secret.yaml
@@ -1,3 +1,5 @@
+
+# Template for Kubernetes Secret to store MySQL root password
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,3 +9,5 @@ metadata:
 type: Opaque
 data:
   mysql-root-password: {{ .Values.mysql.rootPassword | b64enc | quote }}
+
+
