--- a/templates/configmap-config.yaml
+++ b/templates/configmap-config.yaml
@@ -17,6 +17,7 @@ data:
       name: {{ $config.project.name | default $default.project.name }}
       version: "{{ $config.project.version | default $default.project.version }}"
 
+
     database:
       host: {{ include "trishul.fullname" . }}-mysql
       port: {{ .Values.service.mysql.port }}
@@ -38,6 +39,7 @@ data:
       import_mode: {{ $config.database.import_mode | default $default.database.import_mode }}
       batch_size: {{ $config.database.batch_size | default $default.database.batch_size }}
 
+
     parser:
       force_compile: {{ $config.parser.force_compile | default $default.parser.force_compile }}
       compiled_dir: /app/data/compiled_mibs
@@ -52,6 +54,7 @@ data:
       deduplication_enabled: {{ $config.parser.deduplication_enabled | default $default.parser.deduplication_enabled }}
       deduplication_strategy: {{ $config.parser.deduplication_strategy | default $default.parser.deduplication_strategy }}
 
+
     cache:
       enabled: {{ $config.cache.enabled | default $default.cache.enabled }}
       directory: /app/data/cache
@@ -59,9 +62,11 @@ data:
       max_size_mb: {{ $config.cache.max_size_mb | default $default.cache.max_size_mb }}
       cleanup_on_startup: {{ $config.cache.cleanup_on_startup | default $default.cache.cleanup_on_startup }}
 
+
     jobs:
       concurrency: {{ $config.jobs.concurrency | default $default.jobs.concurrency }}
       auto_refresh_interval: {{ $config.jobs.auto_refresh_interval | default $default.jobs.auto_refresh_interval }}
+
 
     cleanup:
       enabled: {{ $config.cleanup.enabled | default $default.cleanup.enabled }}
@@ -71,12 +76,14 @@ data:
       delete_data: {{ $config.cleanup.delete_data | default $default.cleanup.delete_data }}
       keep_statuses: {{ $config.cleanup.keep_statuses | default $default.cleanup.keep_statuses | toJson }}
 
+
     export:
       export_dir: /app/data/exports
       chunk_size: {{ $config.export.chunk_size | default $default.export.chunk_size }}
       include_timestamp: {{ $config.export.include_timestamp | default $default.export.include_timestamp }}
       timestamp_format: "{{ $config.export.timestamp_format | default $default.export.timestamp_format }}"
       compression: "{{ $config.export.compression | default $default.export.compression }}"
+
 
     upload:
       upload_dir: /app/data/uploads
@@ -89,13 +96,19 @@ data:
       {{- end }}
       session_timeout_hours: {{ $config.upload.session_timeout_hours | default $default.upload.session_timeout_hours }}
 
+
     metrics:
       directory: /app/data/metrics
+      retention_days: {{ $config.metrics.retention_days | default $default.metrics.retention_days }}
+      flush_interval_sec: {{ $config.metrics.flush_interval_sec | default $default.metrics.flush_interval_sec }}
+      monitor_interval: {{ $config.metrics.monitor_interval | default $default.metrics.monitor_interval }}
+
 
     traps:
       sync_strategy: {{ $config.traps.sync_strategy | default $default.traps.sync_strategy }}
       skip_synced: {{ $config.traps.skip_synced | default $default.traps.skip_synced }}
       batch_size: {{ $config.traps.batch_size | default $default.traps.batch_size }}
+
 
     logging:
       level: {{ $config.logging.level | default $default.logging.level }}
@@ -105,6 +118,7 @@ data:
       max_file_size_mb: {{ $config.logging.max_file_size_mb | default $default.logging.max_file_size_mb }}
       backup_count: {{ $config.logging.backup_count | default $default.logging.backup_count }}
 
+
     web:
       host: {{ $config.web.host | default $default.web.host }}
       port: {{ $config.web.port | default $default.web.port }}
@@ -113,6 +127,7 @@ data:
       - "{{ . }}"
       {{- end }}
       api_v1_prefix: {{ $config.web.api_v1_prefix | default $default.web.api_v1_prefix }}
+
 
     ui:
       data_table:
@@ -124,27 +139,29 @@ data:
         priority_columns: {{ $config.ui.data_table.priority_columns | default $default.ui.data_table.priority_columns | toJson }}
         node_type_options: {{ $config.ui.data_table.node_type_options | default $default.ui.data_table.node_type_options | toJson }}
 
+    {{- $configExtLinks := $config.external_links | default dict }}
+    {{- $defaultExtLinks := $default.external_links | default dict }}
     external_links:
       prometheus:
-        enabled: {{ $config.external_links.prometheus.enabled | default $default.external_links.prometheus.enabled }}
-        url: "{{ $config.external_links.prometheus.url | default $default.external_links.prometheus.url }}"
-        label: "{{ $config.external_links.prometheus.label | default $default.external_links.prometheus.label }}"
-        description: "{{ $config.external_links.prometheus.description | default $default.external_links.prometheus.description }}"
-        icon: "{{ $config.external_links.prometheus.icon | default $default.external_links.prometheus.icon }}"
-        color: "{{ $config.external_links.prometheus.color | default $default.external_links.prometheus.color }}"
+        enabled: {{ dig "prometheus" "enabled" false $configExtLinks | default (dig "prometheus" "enabled" false $defaultExtLinks) }}
+        url: "{{ dig "prometheus" "url" "" $configExtLinks | default (dig "prometheus" "url" "" $defaultExtLinks) }}"
+        label: "{{ dig "prometheus" "label" "" $configExtLinks | default (dig "prometheus" "label" "" $defaultExtLinks) }}"
+        description: "{{ dig "prometheus" "description" "" $configExtLinks | default (dig "prometheus" "description" "" $defaultExtLinks) }}"
+        icon: "{{ dig "prometheus" "icon" "" $configExtLinks | default (dig "prometheus" "icon" "" $defaultExtLinks) }}"
+        color: "{{ dig "prometheus" "color" "" $configExtLinks | default (dig "prometheus" "color" "" $defaultExtLinks) }}"
 
       alertmanager:
-        enabled: {{ $config.external_links.alertmanager.enabled | default $default.external_links.alertmanager.enabled }}
-        url: "{{ $config.external_links.alertmanager.url | default $default.external_links.alertmanager.url }}"
-        label: "{{ $config.external_links.alertmanager.label | default $default.external_links.alertmanager.label }}"
-        description: "{{ $config.external_links.alertmanager.description | default $default.external_links.alertmanager.description }}" 
-        icon: "{{ $config.external_links.alertmanager.icon | default $default.external_links.alertmanager.icon }}"
-        color: "{{ $config.external_links.alertmanager.color | default $default.external_links.alertmanager.color }}"
+        enabled: {{ dig "alertmanager" "enabled" false $configExtLinks | default (dig "alertmanager" "enabled" false $defaultExtLinks) }}
+        url: "{{ dig "alertmanager" "url" "" $configExtLinks | default (dig "alertmanager" "url" "" $defaultExtLinks) }}"
+        label: "{{ dig "alertmanager" "label" "" $configExtLinks | default (dig "alertmanager" "label" "" $defaultExtLinks) }}"
+        description: "{{ dig "alertmanager" "description" "" $configExtLinks | default (dig "alertmanager" "description" "" $defaultExtLinks) }}"
+        icon: "{{ dig "alertmanager" "icon" "" $configExtLinks | default (dig "alertmanager" "icon" "" $defaultExtLinks) }}"
+        color: "{{ dig "alertmanager" "color" "" $configExtLinks | default (dig "alertmanager" "color" "" $defaultExtLinks) }}"
 
       grafana:
-        enabled: {{ $config.external_links.grafana.enabled | default $default.external_links.grafana.enabled }}
-        url: "{{ $config.external_links.grafana.url | default $default.external_links.grafana.url }}"
-        label: "{{ $config.external_links.grafana.label | default $default.external_links.grafana.label }}"
-        description: "{{ $config.external_links.grafana.description | default $default.external_links.grafana.description }}"
-        icon: "{{ $config.external_links.grafana.icon | default $default.external_links.grafana.icon }}"
-        color: "{{ $config.external_links.grafana.color | default $default.external_links.grafana.color }}"
+        enabled: {{ dig "grafana" "enabled" false $configExtLinks | default (dig "grafana" "enabled" false $defaultExtLinks) }}
+        url: "{{ dig "grafana" "url" "" $configExtLinks | default (dig "grafana" "url" "" $defaultExtLinks) }}"
+        label: "{{ dig "grafana" "label" "" $configExtLinks | default (dig "grafana" "label" "" $defaultExtLinks) }}"
+        description: "{{ dig "grafana" "description" "" $configExtLinks | default (dig "grafana" "description" "" $defaultExtLinks) }}"
+        icon: "{{ dig "grafana" "icon" "" $configExtLinks | default (dig "grafana" "icon" "" $defaultExtLinks) }}"
+        color: "{{ dig "grafana" "color" "" $configExtLinks | default (dig "grafana" "color" "" $defaultExtLinks) }}"
