--- a/Chart.yaml
+++ b/Chart.yaml
@@ -3,7 +3,7 @@ name: trishul
 description: "Trishul depicting 3 main arms of FCAPS i.e., FM, PM and Logs. Hence here we are having some unique utility tools for FM, PM and Logs."
 type: application
 version: 2.1.9
-appVersion: "2.1.8b"
+appVersion: "2.1.9"
 
 keywords:
   - trishul
